--- a/Core/View/Tab/DocFiles.html.twig
+++ b/Core/View/Tab/DocFiles.html.twig
@@ -41,49 +41,17 @@
             </form>
         </div>
         <div class="col-sm-6">
-            <div class="card border-success shadow mb-3 overflow-auto" style="max-height: 225px;">
+            <div class="card border-success shadow mb-3 overflow-auto">
                 <div class="card-body p-3">
                     <h5 class="card-title">
                         <i class="fas fa-folder-plus fa-fw"></i> {{ trans('choose-files') }}
                     </h5>
                     <div class="row">
                         <div class="col-sm-12">
-
                             <div class="p-2">
                                 <input type="text" class="form-control shadow-sm" id="querySearchFile" placeholder="{{ trans('search') }}"/>
                             </div>
-
-                            <ul id="listado-archivos" class="list-unstyled">
-                                {% for file in fsc.lastFiles %}
-                                    <li class="media mb-3">
-                                        {% if file.isImage() %}
-                                            <a href="{{ file.url('download-permanent') }}" target="_blank" class="mr-2">
-                                                <img src="{{ file.url('download') }}" style="max-height: 50px;" class="card-img-top img-thumbnail"
-                                                     alt="{{ file.filename }}">
-                                            </a>
-                                        {% else %}
-                                            <div style="max-height: 64px;">
-                                                <i class="far fa-file-archive fa-fw"></i>
-                                            </div>
-                                        {% endif %}
-                                        <div class="media-body">
-                                            {{ file.filename | raw }}
-                                        </div>
-                                        <div>
-                                            <form action="{{ doc.url() }}" method="post" onsubmit="animateSpinner('add')">
-                                                <input type="hidden" name="activetab" value="{{ currentView.getViewName() }}"/>
-                                                <input type="hidden" name="action" value="relate-file"/>
-                                                <input type="hidden" name="idfile" value="{{ file.idfile }}"/>
-                                                <input type="hidden" name="{{ doc.primaryColumn() }}" value="{{ doc.primaryColumnValue() }}"/>
-                                                {{ formToken() }}
-                                                <button type="submit" class="btn btn-sm btn-success">
-                                                    <i class="fas fa-save fa-fw" aria-hidden="true"></i> {{ trans('relate-file') }}
-                                                </button>
-                                            </form>
-                                        </div>
-                                    </li>
-                                {% endfor %}
-                            </ul>
+                            <ul id="listado-archivos" class="list-unstyled"></ul>
                         </div>
                     </div>
                 </div>
@@ -181,12 +149,58 @@
 </div>
 
 <script>
+    const docUrl = "{{ doc.url() }}";
+    const currentViewGetViewName = "{{ currentView.getViewName() }}";
+    const docPrimaryColumn = "{{ doc.primaryColumn() }}";
+    const docPrimaryColumnValue = {{ doc.primaryColumnValue() }};
+    const formToken = $("input[type='hidden'][name='multireqtoken']")[0].value;
+    const transRelateFile = "{{ trans('relate-file') }}";
+
     $(document).ready(function () {
-        $('#querySearchFile').on('keyup', function (e) {
-            const query = this.value.toLowerCase().trim();
-            $('#listado-archivos li').each(function (index, value) {
-                $(value).toggle($('.media-body', value).text().toLowerCase().trim().includes(query));
-            });
-        })
+        $( "#querySearchFile" ).autocomplete({
+            source: function (request, response) {
+                $.ajax({
+                    method: "POST",
+                    url: '{{ fsc.url() }}',
+                    data: {
+                        action: 'find-related-file',
+                        term: request.term,
+                        code: docPrimaryColumnValue
+                    },
+                    dataType: "json",
+                    success: function (results){
+                        if (results.ok){
+
+                            $('#listado-archivos').empty();
+
+                            results.attachedFiles.forEach(function(archivo){
+                                const html = `
+                                    <div class="media mb-3">
+                                        ${(archivo.mimetype).includes('image') ? `<img src="${archivo.path}" class="mr-3" style="height: 64px; aspect-ratio: auto;">` : ''}
+                                        <div class="media-body">
+                                            <h5 class="mt-0">${archivo.filename}</h5>
+                                            <div>
+                                                <form action="${docUrl}" method="post" onsubmit="animateSpinner('add')">
+                                                    <input type="hidden" name="activetab" value="${currentViewGetViewName}"/>
+                                                    <input type="hidden" name="action" value="relate-file"/>
+                                                    <input type="hidden" name="idfile" value="${archivo.idfile}"/>
+                                                    <input type="hidden" name="${docPrimaryColumn}" value="${docPrimaryColumnValue}"/>
+                                                    <input type="hidden" name="multireqtoken" value="${formToken}"/>
+                                                    <button type="submit" class="btn btn-sm btn-success">
+                                                        <i class="fas fa-save fa-fw" aria-hidden="true"></i> ${transRelateFile}
+                                                    </button>
+                                                </form>
+                                            </div>
+                                        </div>
+                                    </div>
+                                `;
+
+                                $('#listado-archivos').append(html);
+                            });
+                        }
+                    }
+                });
+            }
+        });
     });
 </script>
