--- a/Core/View/Installer/Install.html.twig
+++ b/Core/View/Installer/Install.html.twig
@@ -71,7 +71,9 @@
 <div class="container">
     <div class="row">
         <div class="col-sm-12">
-            <h1 class="h2">{{ trans('installer') }}</h1>
+            <h1 class="h2 mb-1">
+                <i class="fa-solid fa-wand-magic-sparkles"></i> {{ trans('installer') }}
+            </h1>
             <p>{{ trans('installer-p') }}</p>
         </div>
     </div>
@@ -141,23 +143,28 @@
                                         <div class="form-group">
                                             {{ trans('db-type') }}:
                                             <select id="db_type" name="fs_db_type" class="form-control">
-                                                <option value="mysql">MySQL</option>
-                                                <option value="postgresql">PostgreSQL</option>
+                                                {% if fsc.db_type == 'mysql' %}
+                                                    <option value="mysql" selected>MySQL</option>
+                                                    <option value="postgresql">PostgreSQL</option>
+                                                {% else %}
+                                                    <option value="mysql">MySQL</option>
+                                                    <option value="postgresql" selected>PostgreSQL</option>
+                                                {% endif %}
                                             </select>
                                         </div>
                                     </div>
                                     <div class="col-sm-4">
                                         <div class="form-group">
                                             {{ trans('db-host') }}:
-                                            <input type="text" name="fs_db_host" value="localhost" class="form-control"
-                                                   required/>
+                                            <input type="text" name="fs_db_host" value="{{ fsc.db_host }}"
+                                                   class="form-control" required/>
                                         </div>
                                     </div>
                                     <div class="col-sm-4">
                                         <div class="form-group">
                                             {{ trans('db-port') }}:
-                                            <input type="number" id="db_port" name="fs_db_port" value="3306"
-                                                   class="form-control" required/>
+                                            <input type="number" id="db_port" name="fs_db_port"
+                                                   value="{{ fsc.db_port }}" class="form-control" required/>
                                         </div>
                                     </div>
                                     <div class="col-sm-4">
@@ -169,7 +176,7 @@
                                                         <i class="fas fa-database"></i>
                                                     </span>
                                                 </span>
-                                                <input type="text" name="fs_db_name" value="facturascripts"
+                                                <input type="text" name="fs_db_name" value="{{ fsc.db_name }}"
                                                        class="form-control" required/>
                                             </div>
                                         </div>
@@ -177,7 +184,7 @@
                                     <div class="col-sm-4">
                                         <div class="form-group">
                                             {{ trans('db-user') }}:
-                                            <input type="text" id="db_user" name="fs_db_user" value="root"
+                                            <input type="text" id="db_user" name="fs_db_user" value="{{ fsc.db_user }}"
                                                    class="form-control" required/>
                                         </div>
                                     </div>
@@ -237,6 +244,32 @@
                 </div>
             </div>
             <br/>
+            <div class="card-deck">
+                <div class="card shadow mb-3">
+                    <div class="card-body">
+                        <div class="mt-0 text-center">
+                            <i class="fa-solid fa-book fa-3x text-primary"></i>
+                            <h3 class="mt-2 mb-0">
+                                <a href="https://facturascripts.com/ayuda" rel="nofollow" target="_blank">
+                                    {{ trans('help') }}
+                                </a>
+                            </h3>
+                        </div>
+                    </div>
+                </div>
+                <div class="card shadow mb-3">
+                    <div class="card-body">
+                        <div class="mt-0 text-center">
+                            <i class="fa-solid fa-comment-dots fa-3x text-info"></i>
+                            <h3 class="mt-2 mb-0">
+                                <a href="https://facturascripts.com/contacto" rel="nofollow" target="_blank">
+                                    {{ trans('support') }}
+                                </a>
+                            </h3>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
 </div>
