--- a/Core/View/Master/MenuTemplate.html.twig
+++ b/Core/View/Master/MenuTemplate.html.twig
@@ -159,14 +159,17 @@
                         {{ showMessage(log, ['notice'], 'success') }}
                         {{ showMessage(log, ['info'], 'info') }}
 
-                        {% for message in fsc.user.getMessages() %}
-                            <div class="alert alert-{{ message.level == 'error' ? 'danger' : '' }} alert-dismissible fade show" role="alert">
-                                {{ message.body }}
-                                <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-                                    <span aria-hidden="true">&times;</span>
-                                </button>
-                            </div>
-                        {% endfor %}
+                        {% set flashMessages = fsc.user.getMessages() %}
+                        {% if flashMessages is not null %}
+                            {% for message in flashMessages %}
+                                <div class="alert alert-{{ message.level == 'error' ? 'danger' : '' }} alert-dismissible fade show" role="alert">
+                                    {{ message.body }}
+                                    <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                                        <span aria-hidden="true">&times;</span>
+                                    </button>
+                                </div>
+                            {% endfor %}
+                        {% endif %}
                     </div>
                 </div>
             </div>
