--- a/Core/View/Tab/ProductoImagen.html.twig
+++ b/Core/View/Tab/ProductoImagen.html.twig
@@ -69,7 +69,7 @@
     {# -- Attached files -- #}
     <div class="form-row row-cols-1 row-cols-md-5" id="images-container">
         {% for counter, image in currentView.cursor %}
-            <div class="col mb-4">
+            <div class="col mb-4 images-item" data-image-id="{{ image.id }}">
                 {% set border = image.referencia ? '' : 'border-primary' %}
                 <div class="card {{ border }} shadow">
                     <img src="{{ asset(image.url('download')) }}" class="card-img-top"
