Correcciones nuevas clases Request y Response

--- a/Core/View/Master/ListView.html.twig
+++ b/Core/View/Master/ListView.html.twig
@@ -157,7 +157,7 @@
                             <td class="cancelClickable p-0 text-center align-middle">
                                 {% if currentView.settings.checkBoxes %}
                                     <div class="form-check form-check-inline m-0 toggle-ext-link">
-                                        <input class="form-check-input listAction" type="checkbox" name="code[]"
+                                        <input class="form-check-input listAction" type="checkbox" name="codes[]"
                                                value="{{ model.primaryColumnValue() }}"/>
                                     </div>
                                 {% endif %}
