Tarea #641 - metodo calculo precio producto

--- a/Core/View/Master/EditView.html.twig
+++ b/Core/View/Master/EditView.html.twig
@@ -49,6 +49,9 @@
 
         return false;
     }
+
+    // declaramos la variable para poder usarla en Assets\JS\EditProducto.js
+    var calculationMethodPrice = "{{ settings('default', 'price-calculation-method') }}"
 </script>
 
 {# -- Row header -- #}
